Bug 953135 - convertTo("vcard") method of nsIAbCard does not export e-mail address. r=neil